<resources>
    <string name="app_name">WolfTimeManager</string>
    <string name="all_group_time">All group time</string>
    <string name="text_total_time">Total time</string>
    <string name="list_item_header_time">Time</string>
    <string name="list_item_header_project">Project</string>
    <string name="list_item_header_description">Description</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>
    <string name="all_project_title_menu">All project</string>
    <string name="create_new_project_menu">Create new project</string>
    <string name="settings_menu">Settings</string>
    <string name="sing_in_menu">Sing in</string>
    <string name="pause_btn_time_manager">Pause</string>
    <string name="stop_btn_time_manager">Stop</string>
    <string name="create_project_title_dialog">Create project</string>
    <string name="type_project_name_edit_text">Type project name</string>
    <string name="create_btn_create_dialog">Create</string>
    <string name="create_timer_btn">Create timer</string>
    <string name="create_timer_dialog_title">Create timer</string>
    <string name="type_timer_description_edit_text">Type timer description</string>
    <string name="start_timer_btn_dialog">Start timer</string>
    <string name="edit_timer_dialog_title">Edit timer</string>
    <string name="delete_timer_btn_dialog">Delete</string>
    <string name="resume_timer_btn_dialog">Resume</string>
    <string name="your_e_mail_text_view">Your e-mail:</string>
    <string name="app_settings_title_dialog">App settings</string>
    <string name="save_settings_btn_dialog">Save</string>
    <string name="dialog_project_setting_title">Project settings</string>
    <string name="edit_project_btn_dialog">Edit</string>
    <string name="delete_dialog_title_btn">Delete</string>
    <string name="sing_up_main_title">Get started absolutely free</string>
    <string name="email_address_edit_text_sing_up">Email address</string>
    <string name="first_and_last_name_sing_up">First and last name</string>
    <string name="password_sing_up">Password</string>
    <string name="see_how_the_sing_up">See how the world’s best user experiences are created.</string>
    <string name="continue_btn_sing_up">Continue</string>
    <string name="sing_in_text_view_sing_up">Already have an account? Sing in</string>
    <string name="time_manger_title">Time manger</string>
    <string name="sub_title_to_sing_in">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem</string>
    <string name="forgot_password_title_sing_in">Forgot password?</string>
    <string name="sing_in_btn">Sing In</string>
    <string name="sing_up_free_in_sing_in">Sing up free</string>
    <string name="your_first_name_app_settings">Your first name</string>
    <string name="your_last_name_app_settings">Your last name</string>
    <string name="project_setting_dialog_title">Project setting</string>
    <string name="edit_btn_project_setting">Edit</string>
    <string name="delete_btn_project_setting">Delete</string>
    <string name="resume_timer_btn">Resume</string>
    <string name="validation_text_empty">Email and password can not be empty</string>
    <string name="required_field">Required field</string>
    <string name="week_password_validation">Week password</string>
    <string name="error_invalid_email_validation">Error invalid email</string>
    <string name="user_exists_validation">User exists</string>
    <string name="sing_out">Sing out</string>
    <string name="validate_login_form">Wrong login or password</string>
    <string name="validate_login_form_no_exist_user">This user is not registered</string>
    <string name="reset_password_title">Reset password</string>
    <string name="type_your_e_mail">Type your e-mail</string>
    <string name="reset_password_btn">Reset</string>
    <string name="wrong_email_format_reset_password">Wrong e-mail format</string>
    <string name="text_reset_password">A letter with a link to reset your password has been sent</string>
    <string name="project_notify">Project</string>
    <string name="success_delete_notify">success delete</string>
    <string name="can_not_be_empty">The field can not be empty</string>
    <string name="delete_dialog_in_project_edit">You want to delete the project and all the time in it. Are you sure?</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
</resources>
