<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        style="@style/TextView.Bold"
        android:textAlignment="center"
        android:text="@string/time_manger_title"/>

    <TextView
        style="@style/TextView.SubTitle"
        android:textAlignment="center"
        android:text="@string/sub_title_to_sing_in"/>

    <EditText
        android:id="@+id/email_edit_text"
        style="@style/EditText"
        android:inputType="textEmailAddress"
        android:layout_marginTop="24dp"
        android:hint="@string/email_address_edit_text_sing_up" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            style="@style/EditText"
            android:id="@+id/password_edit_text"
            android:inputType="textWebPassword"
            android:hint="@string/password_sing_up" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_below="@id/password_edit_text"
            android:layout_alignParentEnd="true"
            style="@style/TextView"
            android:text="@string/forgot_password_title_sing_in"/>

    </RelativeLayout>

    <Button
        android:id="@+id/sing_in_btn"
        style="@style/Button.Single"
        android:text="@string/sing_in_btn"/>

    <TextView
        android:id="@+id/sing_up"
        style="@style/TextView"
        android:text="@string/sing_up_free_in_sing_in"/>

</LinearLayout>