<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:orderInCategory="1"
        android:checkableBehavior="single"
        android:id="@+id/project_list">

        <item
            android:checked="true"
            android:orderInCategory="1"
            android:title="@string/all_project_title_menu"
            android:id="@+id/all_project_list"
            />

        <item
            android:title="Dinner"
            />
        <item
            android:title="Working"
            />
        <item
            android:title="Season"
            />
        <item
            android:title="Sleeping"
            />
        <item
            android:title="Waiting"
            />

    </group>

    <group
        android:orderInCategory="2"
        android:id="@+id/settings_list">

        <item
            android:id="@+id/create_new_project"
            android:title="@string/create_new_project_menu"/>
        <item
            android:id="@+id/settings_profile"
            android:title="@string/settings_menu"/>
        <item
            android:id="@+id/sing_in_app"
            android:title="@string/sing_in_menu"/>

    </group>

</menu>