<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/title_dialog"
        android:text="@string/dialog_project_setting_title"
        style="@style/TextView.Bold"
        android:layout_alignParentStart="true"/>

    <EditText
        style="@style/EditText"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/edit_project_name_edit_text"
        android:layout_below="@id/title_dialog"
        android:hint="@string/type_project_name_edit_text"
        />

    <LinearLayout
        android:layout_below="@id/edit_project_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:id="@+id/edit_project_btn"
            android:text="@string/edit_project_btn_dialog"
            style="@style/Button"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/delete_project_btn"
            android:text="@string/delete_dialog_title_btn"
            style="@style/Button"/>

    </LinearLayout>

</RelativeLayout>