<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp">

    <TextView
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/list_item_header_time"
        style="@style/TextView.ListHeader"/>
    <TextView
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/list_item_header_project"
        style="@style/TextView.ListHeader"/>
    <TextView
        android:gravity="center_horizontal"
        android:layout_weight="3"
        android:text="@string/list_item_header_description"
        style="@style/TextView.ListHeader" />

</LinearLayout>