<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/title_dialog"
        android:text="@string/reset_password_title"
        style="@style/TextView.Bold"
        android:layout_alignParentStart="true"/>

    <EditText
        style="@style/EditText"
        android:layout_marginTop="24dp"
        android:id="@+id/user_email_reset"
        android:layout_below="@id/title_dialog"
        android:hint="@string/type_your_e_mail"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/reset_password_btn"
        android:layout_below="@id/user_email_reset"
        android:text="@string/reset_password_btn"
        style="@style/Button.Single"/>

</RelativeLayout>