<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/time_text_view"
        android:layout_weight="1"
        android:text="@string/list_item_header_time"
        style="@style/TextView.Normal"/>
    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/project_text_view"
        android:layout_weight="1"
        android:text="@string/list_item_header_project"

        style="@style/TextView.Normal"/>
    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/description_text_view"
        android:layout_weight="3"
        android:text="@string/list_item_header_description"
        style="@style/TextView.Normal" />

</LinearLayout>